# DirectoryMultimediaScanner

./: CMakeLists.txt  README.md
configs/: static_config.yaml
src/: TDirectoryScaner.cpp  TDirectoryScaner.h  THttpHandler.cpp  THttpHandler.h  main.cpp
